# DiffusionBasedRL

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
config/: maze2d.py  maze2d_dit.py  maze2d_improved.py
diffuser/: .gitignore
diffuser/models/: __init__.py  diffusion.py  dit.py  gaussian_diffusion.py  respace.py  temporal.py
diffuser/scripts/: maze2dtable.py
diffuser/utils/: __init__.py  arrays.py  colab.py  config.py  rendering.py  serialization.py  training.py
ditrl/: __init__.py
ditrl/diffusion/: gaussian_diffusion.py
ditrl/models/: dit.py
logs/maze2d-large-v1/diffusion/H384_T256/: args.json  diff.txt
scripts/: diffuser_sample.ipynb  gym.ipynb  maze2dtable.py  test.ipynb  train.py
test/: test.py
